Added snakecase plug and table saving
