# apps/ha_server/lib/ha_server/controllers/table_controller.ex
@@ -2,6 +2,7 @@ defmodule HaServer.TableController do
   use HaServer, :controller
 
   alias HaCore.Tables
+  alias HaCore.Tables.Commands.SaveTableCommand
 
   action_fallback HaServer.FallbackController
 
@@ -34,6 +35,28 @@ defmodule HaServer.TableController do
     render(conn, "show.json", table: table)
   end
 
+  swagger_path :create do
+    post "/tables"
+    description "Create a new table from job results"
+    tag "Tables"
+    parameters do
+      table :body, Schema.ref(:SaveTableCommand), "Table attributes"
+    end
+    operation_id "save_table"
+    response 200, "Success", Schema.ref(:TableSingleResponse)
+    response 422, "Invalid parameters", Schema.ref(:Table)
+  end
+
+  def create(conn, params) do
+    command = struct(SaveTableCommand, params)
+    with {:ok, table} <- Tables.save_table(conn.assigns.user, command) do
+      conn
+      |> put_status(:created)
+      |> put_resp_header("location", job_path(conn, :show, table))
+      |> render("show.json", table: table)
+    end
+  end
+
   def swagger_definitions do
     %{
       TableSingleResponse: swagger_schema do
@@ -49,6 +72,7 @@ defmodule HaServer.TableController do
           paging Schema.ref(:Paging), "", required: true
         end
       end,
+      SaveTableCommand: SaveTableCommand.__swagger__(:single),
       Table: Tables.Table.__swagger__(:single),
       Tables: Tables.Table.__swagger__(:list)
     }
